# ssi_analysis_utility

./: .gitattributes  .gitignore  404.html  CdiffDocumentation.md  LongTable.py  MANIFEST.in  README.md  analysis_utility.html  conda.dev.env.yaml  core.html  index.html  mkdocs.yml  mmaseq.py  pipeline_runner.html  pyproject.toml  robots.txt  sample_manager.html  search.html  search.json  seqndestroy.py  settings.ini  setup.py  sitemap.xml  species_jammer.py  version_guide.md
.github/workflows/: ci.yaml
config/: config.yaml  results_catalogue.yaml
config/Metadata/: Cdiff_Toxins_genbank_metafile.tsv  SNP_metafile.tsv  deletion_metafiles.tsv
config/target_screening/: meta_cds.tsv
data/: samplesheet.tsv
deployment/: index.html
description/: index.html
docs/: deployment.md  description.md  genbank_fetcher.md  home.md  index.md  installation.md  references.md  supported_analysis.md  supported_species.md  tools_databases.md  tutorials.md
examples/: results_catalogue.yaml  samplesheet.tsv  samplesheet_ALL.tsv
examples/Metadata/: SNP_metafile.tsv  deletion_metafiles.tsv  meta_acc.tsv
examples/Results/: Longtable.txt
installation/: index.html
mmaseq/: helper_functions.py  mmaseq.py
mmaseq/config/: config.yaml
mmaseq/data/: samplesheet.tsv
mmaseq/workflow/: Snakefile
nbs/: 00_core.ipynb  01_sample_manager.ipynb  02_analysis_utility.ipynb  03_pipeline_runner.ipynb  04_legionella.ipynb  index.ipynb  nbdev.yml
references/: index.html
resources/: genbank_fetcher.py
search/: search_index.json
src/microbemapper/: wrapper.py
src/mmaseq/: __init__.py  __main__.py  create.py  deploy.py  mmaseq.py  setup.py
ssi_analysis_utility/: CHTyper-1.0.py  _modidx.py  analysis_utility.py  blaster.py  convert_external_genome.py  core.py  hello_world.py  pipeline_runner.py  sample_manager.py  some_string.py
ssi_analysis_utility/config/: config.default.env  config.default.yaml
ssi_analysis_utility/trial/: GAS-2023-0253.delta  GAS-2023-0253.filtered.delta  GAS-2023-0253.frankenfasta
supported_analysis/: index.html
supported_species/: index.html
tools_databases/: index.html
tutorials/: index.html
workflow/: Snakefile  Snakefile_info.py
workflow/configs_species/: C.diff.yaml  C.difficile.yaml  C_difficile.yaml  E.Faecalis.yaml  E.Faecium.yaml  E.coli.yaml  E_Faecium.yaml  Hinfluenzae.yaml  K.pneumoniae.yaml  Lpneumophila.yaml  N.meningitidis.yaml  Nmeningitidis.yaml  S.aureus.yaml  S.enterica.yaml  Spyogenes.yaml  default.yaml  example_species.yaml
workflow/envs/: CHtyper.yaml  DatabaseFetch.yaml  LREfinder.yaml  SB_summarizers.yaml  Senterica.yaml  achtman7genemlst.yaml  amrfinder.yaml  assembly_lineage_determination.yaml  blast.yaml  bowtie2.yaml  bowtie2aligner.yaml  cgMLSTfinder.yaml  emm_typing.yaml  fetch.yaml  htslib.yaml  kleborate.yaml  kmeraligner.yaml  kmerfinder.yaml  legionellaSBT.yaml  meningotype.yaml  minimap2.yaml  mlst.yaml  plasmidfinder.yaml  python_functions.yaml  resfinder.yaml  seqsero2.yaml  serotypefinder.yaml  shovill.yaml  (+6 more)
workflows/: Snakefile  config.yaml  input.tsv
(+106 files in other folders)
