[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "MMAseq"
version = "1.0.0"
description = "Mixed Microbial Analysis on Sequencing data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "snakemake",
    "pandas",
]


# THIS IS THE IMPORTANT PART
[tool.hatch.build.targets.wheel]
packages = ["mmaseq"]

[tool.hatch.build]
exclude = [
    "mmaseq/data/reads/*.gz",
]

# Add workflow, config, and data as packaged resources
[tool.hatch.build.targets.wheel.force-include]
"mmaseq/data/reads/dl_script.sh" = "mmaseq/data/reads/dl_script.sh"




[project.scripts]
mmaseq = "mmaseq.mmaseq:launcher"
