[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "MMAseq"
version = "0.9.0"
description = "Mixed Microbial Analysis on Sequencing data"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "snakemake",
    "pandas",
]


[project.urls]
Documentation = "https://ssi-dk.github.io/ssi_analysis_utility/"
Repository = "https://github.com/ssi-dk/ssi_analysis_utility"


# ---- Build configuration (Hatchling) ----
[tool.hatch.build.targets.wheel]
packages = ["mmaseq"]


[tool.hatch.build.targets.sdist]
only-include = ["mmaseq", "README.md", "LICENSE", "pyproject.toml", "version_guide.md"]


[tool.hatch.build]
exclude = [
  "mmaseq/data/reads/*.gz",
  "**/__pycache__/**",
  "mmaseq/**/.snakemake/**"
]

# Add workflow, config, and data as packaged resources
[tool.hatch.build.targets.wheel.force-include]
"mmaseq/data/reads/dl_script.sh" = "mmaseq/data/reads/dl_script.sh"

[project.scripts]
mmaseq = "mmaseq.mmaseq:launcher"
