[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "MMAseq"
version = "0.9.2"
description = "Mixed Microbial Analysis on Sequencing data"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "snakemake",
    "pandas",
]

[project.urls]
Documentation = "https://ssi-dk.github.io/ssi_analysis_utility/"
Repository = "https://github.com/ssi-dk/ssi_analysis_utility"

# ---- Build configuration (Hatchling) ----
[tool.hatch.build.targets.wheel]
packages = ["src/mmaseq"] # In future to ensure complete uninstallation: add "src/mmaseq/config", "src/mmaseq/data", "src/mmaseq/Deploy", "src/mmaseq/Test"]

[tool.hatch.build.targets.sdist]
only-include = ["src/mmaseq", "README.md", "LICENSE", "pyproject.toml", "version_guide.md"]

[tool.hatch.build]
exclude = [
  "src/mmaseq/data/reads/*.gz",
  "src/mmaseq/config/*yaml",
  "!src/mmaseq/config/results_catalogue.yaml",
  "**/__pycache__/**",
  "**/.snakemake/**"
]

# Add workflow, config, and data as packaged resources
[tool.hatch.build.targets.wheel.force-include]
"src/mmaseq/data/reads/dl_script.sh" = "src/mmaseq/data/reads/dl_script.sh"

[project.scripts]
mmaseq = "mmaseq.mmaseq:launcher"

